--- a/Amase.CSS
+++ b/Amase.CSS
@@ -48,11 +48,16 @@
     visibility: visible;
     content: "✔ Inject Modify Success";
     color: green;
-    text-align: left;
     position: relative;
     left: -14px;
-    background: url("https://raw.githubusercontent.com/AppleSang/Amase-6KLabs/refs/heads/main/texturepack/Skyshard_Wave-E6.gif");
-   }
+    display: inline-block; /* Ensures it can have dimensions */
+    background-image: url("https://raw.githubusercontent.com/AppleSang/Amase-6KLabs/refs/heads/main/texturepack/Skyshard_Wave-E6.gif");
+    background-size: cover; /* Makes the image cover the element */
+    background-repeat: no-repeat;
+    width: 100px; /* Set the width */
+    height: 30px; /* Set the height */
+    padding-left: 20px; /* Adds space for the check mark */
+  }
   /* Change Background */
   #songtime { 
   	background: var(--BG-SongTime) left bottom/cover no-repeat;
